# MovAnal

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
docs/: IMPLEMENTATION_PLAN.md  SYSTEM_DESIGN.md
scripts/: demo_phase1.py
src/: __init__.py
src/features/: __init__.py  extractor.py  motion_history.py  optical_flow.py
src/input/: __init__.py  camera.py  file_reader.py  frame_buffer.py  video_source.py
src/preprocessing/: __init__.py  normalizer.py  pipeline.py  roi_manager.py
src/utils/: __init__.py  config.py  visualization.py
tests/: __init__.py  conftest.py
tests/unit/: test_file_reader.py  test_normalizer.py  test_optical_flow.py
